add: fliter query search on find all event endpoint
