# src/routes/api.ts
@@ -290,6 +290,32 @@ router.get(
   eventController.findAll
   /*
   #swagger.tags = ['Events']
+  #swagger.parameters['limit'] = {
+    in: 'query',
+    type: 'number',
+    default: 10
+  } 
+  #swagger.parameters['page'] = {
+    in: 'query',
+    type: 'number',
+    default: 1
+  } 
+  #swagger.parameters['category'] = {
+    in: 'query',
+    type: 'string',
+  } 
+  #swagger.parameters['isOnline'] = {
+    in: 'query',
+    type: 'boolean',
+  } 
+   #swagger.parameters['isFeatured'] = {
+    in: 'query',
+    type: 'boolean',
+  } 
+   #swagger.parameters['isPublish'] = {
+    in: 'query',
+    type: 'boolean',
+  } 
   */
 );
 
